# FIFA-26

./: README.md
FifaPredictorAI/: app.py  database.py  pyproject.toml  replit.md
FifaPredictorAI/attached_assets/: Pasted--FIFA-World-Cup-2026-Finalist-Prediction-AI-Project-Based-on-Shivaprasad-Sir-s-inst-1762535025814_1762535025814.txt
